Naming convention decision for package explained. Fixing Accept comment and changing secured endpoints to have "more sense".
